--- a/.travis.yml
+++ b/.travis.yml
@@ -1,1 +1,7 @@
-install: gem install rails
+ gemspec
+ 
+-gem "rails", "~> 4.1.0"
++gem "rails", "4.1.6.rc1"
+ gem "omniauth", "~> 1.2.0"
+ gem "omniauth-oauth2", "~> 1.1.0"
+ gem "rdoc"
